[gd_scene load_steps=8 format=2]

[ext_resource path="res://Nodes/AircraftCarrier.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/ShipGrid.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/Cruiser.tscn" type="PackedScene" id=3]
[ext_resource path="res://Nodes/Destroyer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Nodes/Submarine.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/ShipPlacement.gd" type="Script" id=6]
[ext_resource path="res://Nodes/ShipUI.tscn" type="PackedScene" id=7]

[node name="ShipPlacement" type="Node2D"]
script = ExtResource( 6 )

[node name="ShipGrid" parent="." instance=ExtResource( 2 )]

[node name="AircraftCarrier" parent="." instance=ExtResource( 1 )]
position = Vector2( 608, 48 )

[node name="Cruiser" parent="." instance=ExtResource( 3 )]
position = Vector2( 728, 136 )

[node name="Submarine" parent="." instance=ExtResource( 5 )]
position = Vector2( 816, 216 )

[node name="Destroyer" parent="." instance=ExtResource( 4 )]
position = Vector2( 896, 304 )

[node name="ShipUI" parent="." instance=ExtResource( 7 )]
margin_left = 120.0
margin_top = 536.0
margin_right = 120.0
margin_bottom = 536.0
